# 8085-cpp

./: CMakeLists.txt  README.md
src/: Arithmetic.cpp  Arithmetic.h  Branching.cpp  Debugger.cpp  Essentials.h  Load_and_Store.cpp  Logical.cpp  main.cpp
src/Headers/: Debugger.h  main.h
src/Utils/: Utils.cpp  Utils.h  Validate.cpp  Validate.h
src/tests/: arithmetic_test.cpp
